--- a/Stock_Market_Prediction_Model_Creation.ipynb
+++ b/Stock_Market_Prediction_Model_Creation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "88d67c13-1dca-451c-85d5-eb234183c342",
    "metadata": {},
    "outputs": [],
@@ -15,22 +15,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "f3bc102c-1442-4cae-9093-f77f2b7b7e0c",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YF.download() has changed argument auto_adjust default to True\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[*********************100%***********************]  2 of 2 completed\n"
+      "[*********************100%***********************]  1 of 1 completed\n"
      ]
     }
    ],
    "source": [
     "start = '2012-01-01'\n",
     "end = '2022-12-21'\n",
-    "stock = 'BP plc'\n",
+    "stock = 'GOOG'\n",
     "\n",
     "data = yf.download(stock, start, end)"
    ]
